# yd_assistant

./: .dockerignore  .gitignore  .gitlab-ci.yml  docker-compose.yaml  pyproject.toml
bot/: config.py  main.py
bot/db/: connect_pg.py  models.py
bot/info/: auth.py  auth.txt  main.py  reports.py
bot/repositories/: balance.py  base.py  campaigns_stat.py  logins.py
bot/routers/: auth.py  info.py  main_menu.py  reports.py  settings.py
bot/routers/report_buttons/: client_report.py  daily_report.py  main.py  report_by_login.py
bot/services/: balance.py  campaigns_stat.py  client_logins.py  create_simple_report.py  login_stat.py
bot/services/background_tasks/: celery_app.py  run_beat.py  run_worker.py  tasks.py
bot/utils/: token_handler.py
docker/bot/: Dockerfile
logger/: background_tasks.py  conf.py  main.py
migrations/: env.py
migrations/versions/: b2d0daa2e3f0_.py  d1483dcab73c_.py
scripts/: beat_start.sh  worker_start.sh
tests/auth_api_tests/: test_api.py
yandex_auth/: config.py  main.py
yandex_auth/routers/: index.py  token.py
yandex_auth/schemas/: token.py
