[project]
name = "yd-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandrSmolyachkovGH",email = "alexandr.smolyachkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "celery (>=5.5.2,<6.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
